--- a/cart.html
+++ b/cart.html
@@ -144,9 +144,64 @@
     <!-- ===== Cart Section CSS End -->
 
     <!-- ===== Footer HTML -->
-    <footer class="bg-light py-4 border-top mt-auto">
-      <div class="container text-center">
-        <p class="mb-0">Copyright &copy; 2025 ShopNow. All rights reserved.</p>
+    <footer class="bg-primary text-light pt-5 pb-4">
+      <div class="container">
+        <div class="row g-4">
+          <!-- Column 1: About -->
+          <div class="col-12 col-sm-6 col-md-3">
+            <h5>ShopNow</h5>
+            <p>
+              Your one-stop online shop for the best deals on electronics,
+              fashion, and more. Fast delivery and 24/7 support.
+            </p>
+          </div>
+
+          <!-- Column 2: Quick Links -->
+          <div class="col-12 col-md-3">
+            <h5>Quick Links</h5>
+            <ul class="list-unstyled">
+              <li><a href="my_profile.html">Profile</a></li>
+              <li><a href="wishlist.html">Wishlist</a></li>
+              <li><a href="product_details.html">Product Details</a></li>
+            </ul>
+          </div>
+
+          <!-- Column 3: Contact Info -->
+          <div class="col-12 col-md-3">
+            <h5>Contact Us</h5>
+            <ul class="list-unstyled">
+              <li class="mb-2">
+                <i class="bi bi-telephone-fill me-2"></i> +880 1234 567890
+              </li>
+              <li class="mb-2">
+                <i class="bi bi-envelope-fill me-2"></i> support@shopnow.com
+              </li>
+              <li>
+                <i class="bi bi-geo-alt-fill me-2"></i> 123 Market Road, Dhaka
+                1207
+              </li>
+            </ul>
+          </div>
+
+          <!-- Column 4: Social & App Links -->
+          <div class="col-12 col-md-3">
+            <h5>Follow Us</h5>
+            <div class="social-icons mb-3">
+              <a href="#"><i class="bi bi-facebook fs-5"></i></a>
+              <a href="#"><i class="bi bi-instagram fs-5"></i></a>
+              <a href="#"><i class="bi bi-youtube fs-5"></i></a>
+            </div>
+            <h6 class="text-white">Download Our App</h6>
+            <div class="app-badges d-flex flex-wrap">
+              <img src="images/googlePlay.png" alt="Google Play" />
+              <img src="images/appStore.png" alt="App Store" />
+            </div>
+          </div>
+        </div>
+      </div>
+      <hr class="border-secondary mt-4" />
+      <div class="text-center footer_bottom">
+        &copy; 2025 <strong>ShopNow</strong>. All rights reserved.
       </div>
     </footer>
     <!-- ===== Footer HTML End -->
