--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
@@ -198,7 +202,10 @@
             <div class="card product_card h-100">
               <img src="images/f1.jpg" class="card-img-top" alt="Product" />
               <div class="card-body">
-                <h6 class="card-title">
+                <h6
+                  class="card-title"
+                  onclick="location.href='product_details.html'"
+                >
                   Premium Cotton Half Sleeve Casual Shirt for Men
                 </h6>
                 <p class="text-danger fw-bold mb-1">$59.99</p>
@@ -215,7 +222,10 @@
             <div class="card product_card h-100">
               <img src="images/f2.jpg" class="card-img-top" alt="Product" />
               <div class="card-body">
-                <h6 class="card-title">
+                <h6
+                  class="card-title"
+                  onclick="location.href='product_details.html'"
+                >
                   Stylish Half Sleeve Casual Shirt for Men
                 </h6>
                 <p class="text-danger fw-bold mb-1">$39.99</p>
@@ -232,7 +242,10 @@
             <div class="card product_card h-100">
               <img src="images/f3.jpg" class="card-img-top" alt="Product" />
               <div class="card-body">
-                <h6 class="card-title">
+                <h6
+                  class="card-title"
+                  onclick="location.href='product_details.html'"
+                >
                   New Cotton Half Sleeve Casual Shirt for Men
                 </h6>
                 <p class="text-danger fw-bold mb-1">$25.50</p>
@@ -249,7 +262,10 @@
             <div class="card product_card h-100">
               <img src="images/f4.jpg" class="card-img-top" alt="Product" />
               <div class="card-body">
-                <h6 class="card-title">
+                <h6
+                  class="card-title"
+                  onclick="location.href='product_details.html'"
+                >
                   Premium Cotton Half Sleeve Casual Shirt for Men
                 </h6>
                 <p class="text-danger fw-bold mb-1">$19.99</p>
@@ -275,7 +291,10 @@
             <div class="card product_card h-100">
               <img src="images/f1.jpg" class="card-img-top" alt="Product" />
               <div class="card-body">
-                <h6 class="card-title">
+                <h6
+                  class="card-title"
+                  onclick="location.href='product_details.html'"
+                >
                   Premium Cotton Half Sleeve Casual Shirt for Men
                 </h6>
                 <p class="text-danger fw-bold mb-1">$59.99</p>
@@ -292,7 +311,10 @@
             <div class="card product_card h-100">
               <img src="images/f2.jpg" class="card-img-top" alt="Product" />
               <div class="card-body">
-                <h6 class="card-title">
+                <h6
+                  class="card-title"
+                  onclick="location.href='product_details.html'"
+                >
                   Stylish Half Sleeve Casual Shirt for Men
                 </h6>
                 <p class="text-danger fw-bold mb-1">$39.99</p>
@@ -309,7 +331,10 @@
             <div class="card product_card h-100">
               <img src="images/f3.jpg" class="card-img-top" alt="Product" />
               <div class="card-body">
-                <h6 class="card-title">
+                <h6
+                  class="card-title"
+                  onclick="location.href='product_details.html'"
+                >
                   New Cotton Half Sleeve Casual Shirt for Men
                 </h6>
                 <p class="text-danger fw-bold mb-1">$25.50</p>
@@ -326,7 +351,10 @@
             <div class="card product_card h-100">
               <img src="images/f4.jpg" class="card-img-top" alt="Product" />
               <div class="card-body">
-                <h6 class="card-title">
+                <h6
+                  class="card-title"
+                  onclick="location.href='product_details.html'"
+                >
                   Premium Cotton Half Sleeve Casual Shirt for Men
                 </h6>
                 <p class="text-danger fw-bold mb-1">$19.99</p>
@@ -343,7 +371,10 @@
             <div class="card product_card h-100">
               <img src="images/n1.jpg" class="card-img-top" alt="Product" />
               <div class="card-body">
-                <h6 class="card-title">
+                <h6
+                  class="card-title"
+                  onclick="location.href='product_details.html'"
+                >
                   Premium Cotton Full Sleeve Casual Shirt for Men
                 </h6>
                 <p class="text-danger fw-bold mb-1">$59.99</p>
@@ -360,7 +391,10 @@
             <div class="card product_card h-100">
               <img src="images/n2.jpg" class="card-img-top" alt="Product" />
               <div class="card-body">
-                <h6 class="card-title">
+                <h6
+                  class="card-title"
+                  onclick="location.href='product_details.html'"
+                >
                   Stylish Full Sleeve Casual Shirt for Men
                 </h6>
                 <p class="text-danger fw-bold mb-1">$39.99</p>
@@ -377,7 +411,10 @@
             <div class="card product_card h-100">
               <img src="images/n3.jpg" class="card-img-top" alt="Product" />
               <div class="card-body">
-                <h6 class="card-title">
+                <h6
+                  class="card-title"
+                  onclick="location.href='product_details.html'"
+                >
                   New Cotton Full Sleeve Casual Shirt for Men
                 </h6>
                 <p class="text-danger fw-bold mb-1">$25.50</p>
@@ -394,7 +431,10 @@
             <div class="card product_card h-100">
               <img src="images/n4.jpg" class="card-img-top" alt="Product" />
               <div class="card-body">
-                <h6 class="card-title">
+                <h6
+                  class="card-title"
+                  onclick="location.href='product_details.html'"
+                >
                   Premium Cotton Half Sleeve Casual Shirt for Men
                 </h6>
                 <p class="text-danger fw-bold mb-1">$19.99</p>
@@ -410,7 +450,10 @@
             <div class="card product_card h-100">
               <img src="images/n5.jpg" class="card-img-top" alt="Product" />
               <div class="card-body">
-                <h6 class="card-title">
+                <h6
+                  class="card-title"
+                  onclick="location.href='product_details.html'"
+                >
                   Premium Cotton Full Sleeve Casual Shirt for Men
                 </h6>
                 <p class="text-danger fw-bold mb-1">$59.99</p>
@@ -427,7 +470,10 @@
             <div class="card product_card h-100">
               <img src="images/n6.jpg" class="card-img-top" alt="Product" />
               <div class="card-body">
-                <h6 class="card-title">
+                <h6
+                  class="card-title"
+                  onclick="location.href='product_details.html'"
+                >
                   Stylish 3 Quarter Twill Fabrics Pant for Men
                 </h6>
                 <p class="text-danger fw-bold mb-1">$39.99</p>
@@ -444,7 +490,10 @@
             <div class="card product_card h-100">
               <img src="images/n7.jpg" class="card-img-top" alt="Product" />
               <div class="card-body">
-                <h6 class="card-title">
+                <h6
+                  class="card-title"
+                  onclick="location.href='product_details.html'"
+                >
                   New Cotton Full Sleeve Casual Shirt for Men
                 </h6>
                 <p class="text-danger fw-bold mb-1">$25.50</p>
@@ -461,7 +510,10 @@
             <div class="card product_card h-100">
               <img src="images/n8.jpg" class="card-img-top" alt="Product" />
               <div class="card-body">
-                <h6 class="card-title">
+                <h6
+                  class="card-title"
+                  onclick="location.href='product_details.html'"
+                >
                   Premium Cotton Half Sleeve Casual Shirt for Men
                 </h6>
                 <p class="text-danger fw-bold mb-1">$19.99</p>
@@ -479,9 +531,64 @@
     <!-- ===== Feature Product HTML End -->
 
     <!-- ===== Footer HTML -->
-    <footer class="bg-light py-4 border-top mt-auto">
-      <div class="container text-center">
-        <p class="mb-0">Copyright &copy; 2025 ShopNow. All rights reserved.</p>
+    <footer class="bg-primary text-light pt-5 pb-4">
+      <div class="container">
+        <div class="row g-4">
+          <!-- Column 1: About -->
+          <div class="col-12 col-sm-6 col-md-3">
+            <h5>ShopNow</h5>
+            <p>
+              Your one-stop online shop for the best deals on electronics,
+              fashion, and more. Fast delivery and 24/7 support.
+            </p>
+          </div>
+
+          <!-- Column 2: Quick Links -->
+          <div class="col-12 col-md-3">
+            <h5>Quick Links</h5>
+            <ul class="list-unstyled">
+              <li><a href="my_profile.html">Profile</a></li>
+              <li><a href="wishlist.html">Wishlist</a></li>
+              <li><a href="product_details.html">Product Details</a></li>
+            </ul>
+          </div>
+
+          <!-- Column 3: Contact Info -->
+          <div class="col-12 col-md-3">
+            <h5>Contact Us</h5>
+            <ul class="list-unstyled">
+              <li class="mb-2">
+                <i class="bi bi-telephone-fill me-2"></i> +880 1234 567890
+              </li>
+              <li class="mb-2">
+                <i class="bi bi-envelope-fill me-2"></i> support@shopnow.com
+              </li>
+              <li>
+                <i class="bi bi-geo-alt-fill me-2"></i> 123 Market Road, Dhaka
+                1207
+              </li>
+            </ul>
+          </div>
+
+          <!-- Column 4: Social & App Links -->
+          <div class="col-12 col-md-3">
+            <h5>Follow Us</h5>
+            <div class="social-icons mb-3">
+              <a href="#"><i class="bi bi-facebook fs-5"></i></a>
+              <a href="#"><i class="bi bi-instagram fs-5"></i></a>
+              <a href="#"><i class="bi bi-youtube fs-5"></i></a>
+            </div>
+            <h6 class="text-white">Download Our App</h6>
+            <div class="app-badges d-flex flex-wrap">
+              <img src="images/googlePlay.png" alt="Google Play" />
+              <img src="images/appStore.png" alt="App Store" />
+            </div>
+          </div>
+        </div>
+      </div>
+      <hr class="border-secondary mt-4" />
+      <div class="text-center footer_bottom">
+        &copy; 2025 <strong>ShopNow</strong>. All rights reserved.
       </div>
     </footer>
     <!-- ===== Footer HTML End -->
